[package]
name = "mdp"
version = "0.1.0"
authors = ["Josh King <jking@chambana.net>"]

[dependencies]
nom = "^4.0"
cookie-factory = "0.2.4"
bytes = "0.4.6"
sodiumoxide = "0.0.14"
bitflags = "1.0.1"
time = "0.1"
libc = "0.2.21"
futures = "0.1.13"
petgraph = "0.4.8"
tokio-udp = "0.1.1"
tokio-codec = "0.1.0"
tokio-timer = "0.2.4"
log = "0.4"
stable-vec = "0.2"
hex-slice = "0.1.2"

[dev-dependencies]
env_logger = "0.5.3"
test-logger = "0.1.0"
net2 = "0.2"
futures-cpupool = "0.1"
tokio = "0.1.7"
